styled the header and created it's corresponding media queries

--- a/index.html
+++ b/index.html
@@ -9,35 +9,44 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>The Next Web Clone by Tripple-A & rAheebwa</title>
 </head>
 
 <body>
+    
     <header class="main-header">
+        <nav class="mobile-nav">
+            <ul class="nav-links">
+                <li class="nav-link"><i class="fa fa-search "></i></li>
+                <li class="nav-link"><i class="fa fa-bars"></i></li>
+            </ul>
+        </nav>
+        <!-- <img src="https://via.placeholder.com/300.png/E91E63/fff?text=TNW" alt="" srcset=""> -->
         <nav class="top-nav">
             <ul class="nav-links">
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
+                <li class="nav-link"> <a href="#">News</a></li>
+                <li class="nav-link"><a href="#">Business</a></li>
+                <li class="nav-link"><a href="#">AMAs</a></li>
+                <li class="nav-link"><a href="#">Events</a></li>
+                <li class="nav-link"><a href="#">Spaces</a></li>
+                <li class="nav-link"><a href="#">Terms & Conditions</a></li>
             </ul>
             <ul class="nav-links nav-right">
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
+                <li class="nav-link"><a href="#">About</a></li>
+                <li class="nav-link"><a href="#">Team</a></li>
+                <li class="nav-link"><a href="#">Advertise</a></li>
+                <li class="nav-link"><a href="#">Jobs</a></li>
+                <li class="nav-link"><a href="#">Contact</a></li>
             </ul>
         </nav>
         <nav class="main-nav">
             <ul class="nav-links">
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
+                <li class="nav-link">LATEST<a href="#"></a></li>
+                <li class="nav-link"><a href="#">HARD FORK</a></li>
+                <li class="nav-link"><a href="#">PLUGGED</a></li>
+                <li class="nav-link"><a href="#">FUNDAMENTALS</a></li>
+                <li class="nav-link"><a href="#">WORK 2030</a></li>
             </ul>
         </nav>
     </header>
