Added Top section - Styled with responsive design

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
     <main class="main-content">
         <div class="top-section">
             <article class="main-article">
-                <h1 class="article-heading"></h1>
+                <h1 class="article-heading">This quantum physics breakthrough could be the origin story for time travel</h1>
                 <p class="sub-heading"></p>
             </article>
             <article class="sub-article">
-                <h1 class="article-heading"></h1>
+                <h1 class="article-heading">Apple may have leaked new AirPods with noise cancelling in iOS 13.2</h1>
                 <p class="sub-heading"></p>
             </article>
             <article class="sub-article">
-                <h1 class="article-heading"></h1>
+                <h1 class="article-heading">Hands-on: The Surface Laptop 3 is the Surface for people who don’t want a Surface</h1>
                 <p class="sub-heading"></p>
             </article>
         </div>
