added pictures and headings in the mid-section and their corresponding media-queries

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/all.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/section2.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>The Next Web Clone by Tripple-A & rAheebwa</title>
 </head>
@@ -76,70 +77,94 @@
             <h2 class="section-heading">Latest News</h2>
             <div class="row">
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title"> Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle"> Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
+                    <p class="subtitle">Napier Lopez. 3 hours ago</p>
+                </div>
                 </div>
             </div>
         </section>
 
         <section class="sm-news-section microsoft-news">
-            <h2 class="section-heading">Latest News</h2>
+            <h2 class="section-heading">Microsoft Surface Event 2019</h2>
             <div class="row">
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
+                    <p class="subtitle">Napier Lopez. 1 day ago</p>
+                </div>
                 </div>
                 <div class="col col-qtr">
                     <img src="" alt="" class="image">
+                    <div class="titles">
                     <h3 class="title"></h3>
                     <p class="subtitle"></p>
                 </div>
-                <div class="col col-qtr">
-                    <img src="" alt="" class="image">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
                 </div>
                 <div class="col col-qtr">
                     <img src="" alt="" class="image">
+                    <div class="titles">
                     <h3 class="title"></h3>
                     <p class="subtitle"></p>
+                </div>
+                </div>
+                <div class="col col-qtr">
+                    <img src="" alt="" class="image">
+                    <div class="titles">
+                    <h3 class="title"></h3>
+                    <p class="subtitle"></p>
+                </div>
                 </div>
             </div>
         </section>
