--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <section class="sm-news-section microsoft-news">
             <h2 class="section-heading">Microsoft Surface Event 2019</h2>
-            <div class="row">
+            <div class="row mid-section">
                 <div class="col col-qtr">
                     <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
                     <div class="titles">
@@ -146,31 +146,40 @@
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
                     <div class="titles">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
+                    <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
                     <div class="titles">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
+                    <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
                     <div class="titles">
-                    <h3 class="title"></h3>
-                    <p class="subtitle"></p>
+                    <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
+                    <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
             </div>
         </section>
 
         <section class="latest-funding">
-            <h2 class="sect-heading"><small class="right-links"></small></h2>
+            <h2 class="sect-heading"> Latest funding rounds on Index.co</h2>
+
+                
+                <nav class="right-links">
+                 <ul>
+                     <li>See more</li>
+                     <li> Get updates by email</li>
+                     <li>Add Info</li>
+                 </ul>
+                </nav>
 
             <div class="row">
                 <div class="col col-qtr"></div>
