Added dummy content in the latest funding ssection

--- a/index.html
+++ b/index.html
@@ -77,56 +77,56 @@
             <h2 class="section-heading">Latest News</h2>
             <div class="row">
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title"> Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle"> Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/0000FF/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/0000FF/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Hands-on:Laptop3 is the surface for people who dont want a surface</h3>
                     <p class="subtitle">Napier Lopez. 3 hours ago</p>
@@ -139,28 +139,28 @@
             <h2 class="section-heading">Microsoft Surface Event 2019</h2>
             <div class="row mid-section">
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
                     <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
                     <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
                     <p class="subtitle">Napier Lopez. 1 day ago</p>
                 </div>
                 </div>
                 <div class="col col-qtr">
-                    <img src="https://via.placeholder.com/270x135/FFFF00/808080 ?Text=Digital.comC/O https://placeholder.com/" alt="" class="image">
+                    <img src="https://via.placeholder.com/270x135/FFFF00/808080/" alt="image" class="image">
                     <div class="titles">
                     <h3 class="title">Surface Duo, Neo, and everything else at Microsoft's packed hardware event</h3>
                     <p class="subtitle">Napier Lopez. 1 day ago</p>
@@ -182,10 +182,60 @@
                 </nav>
 
             <div class="row">
-                <div class="col col-qtr"></div>
-                <div class="col col-qtr"></div>
-                <div class="col col-qtr"></div>
-                <div class="col col-qtr"></div>
+                <div class="col col-qtr">
+                    <div class="funding-rounds">
+                        <div class="company">
+                            <h5>Verisat</h5>
+                        </div>
+                        <div class="seed-fund">
+                            <h6>$2.5M <br><small>seed fund</small></h6>
+                        </div>
+                        <img src="https://via.placeholder.com/150x150/dedede/fff/" alt="image" class="offset-image">
+                        <p>
+                            <span><i class="fa fa-tag"></i> internet, +2</span><br>
+                            <span><i class="fa fa-briefcase"></i> Venture Company LTD</span><br>
+                        </p>
+                    </div>
+                </div>
+                <div class="col col-qtr"><div class="funding-rounds">
+                        <div class="company">
+                            <h5>Verisat</h5>
+                        </div>
+                        <div class="seed-fund">
+                            <h6>$2.5M <br><small>seed fund</small></h6>
+                        </div>
+                        <img src="https://via.placeholder.com/150x150/dedede/fff/" alt="image" class="offset-image">
+                        <p>
+                            <span><i class="fa fa-tag"></i> internet, +2</span><br>
+                            <span><i class="fa fa-briefcase"></i> Venture Company LTD</span><br>
+                        </p>
+                    </div></div>
+                <div class="col col-qtr"><div class="funding-rounds">
+                        <div class="company">
+                            <h5>Verisat</h5>
+                        </div>
+                        <div class="seed-fund">
+                            <h6>$2.5M <br><small>seed fund</small></h6>
+                        </div>
+                        <img src="https://via.placeholder.com/150x150/dedede/fff/" alt="image" class="offset-image">
+                        <p>
+                            <span><i class="fa fa-tag"></i> internet, +2</span><br>
+                            <span><i class="fa fa-briefcase"></i> Venture Company LTD</span><br>
+                        </p>
+                    </div></div>
+                <div class="col col-qtr"><div class="funding-rounds">
+                        <div class="company">
+                            <h5>Verisat</h5>
+                        </div>
+                        <div class="seed-fund">
+                            <h6>$2.5M <br><small>seed fund</small></h6>
+                        </div>
+                        <img src="https://via.placeholder.com/150x150/dedede/fff/" alt="image" class="offset-image">
+                        <p>
+                            <span><i class="fa fa-tag"></i> internet, +2</span><br>
+                            <span><i class="fa fa-briefcase"></i> Venture Company LTD</span><br>
+                        </p>
+                    </div></div>
             </div>
         </section>
 
@@ -317,42 +367,42 @@
 
             <div class="row">
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
                 <div class="col col-qtr">
-                    <img src="" alt="" class="image-square">
+                    <img src="" alt="image" class="image-square">
                     <h3 class="deal-heading"></h3>
                     <p class="price"></p>
                 </div>
