Fixed visibilty of thirds row on tablet mode

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="main-header">
         <nav class="mobile-nav">
-            <div class="mobile-image"> TNV</div>
+            <div class="mobile-image"><img src="./images/tnw.png" alt="logo"></div>
             <ul class="nav-links">
                 <li class="nav-link"><i class="fa fa-search "></i></li>
                 <li class="nav-link"><i class="fa fa-bars"></i></li>
