Added Search Icon on  extreme right of second nav

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 <li class="nav-link"><a href="#">FUNDAMENTALS</a></li>
                 <li class="nav-link"><a href="#">WORK 2030</a></li>
             </ul>
+
+            <ul class="nav-links nav-right">
+                <li class="nav-link"><a href="#"><i class="fa fa-search"></i></a></li>
+            </ul>
         </nav>
 
     </header>
