Added Article image - It disappears in medium & small screens

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class="yellow-nav">Did you get your tickets to fork live yet?</div>
         <div class="top-section">
             <article class="main-article" style="background-image: url(https://source.unsplash.com/random/1600x900);">
+                <img src="./images/tnw3.png" alt="article image" class="article-img">
                 <h1 class="article-heading">This quantum physics breakthrough could be the origin story for time travel
                 </h1>
                 <p class="sub-heading"></p>
