Added Image on in medium sceen navigation

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </ul>
         </nav>
 
+        <img class="logo-nav" src="./images/tnw.png" alt="logo nav">
 
         <nav class="top-nav">
             <ul class="nav-links">
